# url-shortener

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 001_create_urls_table.sql  002_create_click_events_table.sql
src/: lib.rs  main.rs  openapi.rs
src/config/: mod.rs
src/dto/: request.rs  response.rs
src/errors/: app_error.rs  mod.rs
src/middleware/: rate_limit.rs
src/models/: click_event.rs  mod.rs  url.rs
src/repositories/: click_repository.rs  mod.rs  url_repository.rs
src/routes/: health.rs  mod.rs  redirect.rs  shorten.rs  stats.rs  urls.rs
src/services/: cache_service.rs  code_generator.rs  mod.rs  url_service.rs
src/tasks/: cleanup.rs  click_flush.rs  mod.rs
static/: app.js  index.html  style.css
tests/: health_test.rs  redirect_test.rs  shorten_test.rs  stats_test.rs  urls_test.rs
tests/common/: mod.rs
